assets/css/webflow.css
/* ... */
#w-node-_76ba38e4-2715-c796-e82b-8239d41d1ea3-ab2eee42 {
  grid-area: 2 / 3 / 3 / 4;
}

#w-node-_76ba38e4-2715-c796-e82b-8239d41d1ea4-ab2eee42 {
  grid-area: 2 / 4 / 3 / 5;
}

@media screen and (max-width: 991px) {
  #w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-ab2eee42, #w-node-dac044b7-be90-60f3-414d-4224828ffd8f-ab2eee42, #w-node-dac044b7-be90-60f3-414d-4224828ffd99-ab2eee42 {
    grid-area: 2 / 1 / 3 / 2;
  }

  #w-node-dac044b7-be90-60f3-414d-4224828ffdd8-ab2eee42 {
    grid-area: 4 / 1 / 5 / 2;
  }

  #w-node-dac044b7-be90-60f3-414d-4224828ffe12-ab2eee42 {
    grid-area: 3 / 1 / 4 / 2;
  }

  #w-node-_76ba38e4-2715-c796-e82b-8239d41d1e9e-ab2eee42 {
    grid-area: 3 / 2 / 4 / 3;
  }

  #w-node-_76ba38e4-2715-c796-e82b-8239d41d1ea0-ab2eee42 {
    grid-area: 3 / 1 / 4 / 2;
  }

  #w-node-_76ba38e4-2715-c796-e82b-8239d41d1ea1-ab2eee42 {
    grid-area: 2 / 1 / 3 / 2;
  }

  #w-node-_76ba38e4-2715-c796-e82b-8239d41d1ea2-ab2eee42 {
    grid-area: 2 / 2 / 3 / 3;
  }

  #w-node-_76ba38e4-2715-c796-e82b-8239d41d1ea3-ab2eee42 {
    grid-area: 4 / 1 / 5 / 2;
  }

  #w-node-_76ba38e4-2715-c796-e82b-8239d41d1ea4-ab2eee42 {
    grid-area: 4 / 2 / 5 / 3;
  }
}

#intro-wrap {user-select: none;}
body::-webkit-scrollbar {width: 0;}
#new-task-section::-webkit-scrollbar {width: 0;}
#intro-wrap::-webkit-scrollbar {width: 0;}

